--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Link for youtube: https://youtu.be/mLyliB5OnTs
+
+
 # Week5Assign
 Create a menu app as seen in this week’s video. What you create is up to you as long as it meets the following requirements:
 Use at least one array.
